# fast-next-personal-automation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  JOBS.md  MANUAL.md  Makefile  README.md  TEMPEMAIL.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025-12-21_.py  2025-12-22_jobs_and_profiles.py  2025-12-22_pipeline_runs.py  2025-12-23_conversation_area.py  2025-12-23_job_profiles.py  2025-12-23_resumes.py  2025-12-23_stories_and_projects.py  2025-12-24_cover_letter_pdf.py  2025-12-24_job_prep.py  2025-12-24_profile_story_projects.py  2025-12-26_job_application_fields.py  2025-12-26_profile_contact_info.py  2025-12-27_job_soft_delete_and_fields.py  2025-12-28_job_profile_id_and_dismissed_status.py  2025-12-28_remove_dismissed_status.py  2025-12-29_email_sources.py  2025-12-30_drop_items_table.py  2025-12-31_add_ingestion_source_to_jobs_table.py  2025-12-31_email_hub_architecture.py  2026-01-05_scheduled_tasks.py  2026-01-06_drop_job_apply_tracking_fields.py  2026-03-01_add_finance_categories.py  2026-03-01_add_finances.py  2026-03-02_budget_nullable_category.py  2026-03-02_recurring_expense_account_id.py  2026-03-03_fix_finance_categories_updated_at.py  2026-03-03_rename_finance_tables.py  2026-03-04_integration_tokens.py  2026-03-06_finance_account_default.py  2026-03-12_job_workflow_refactor.py  2026-03-18_add_job_analysis_metadata.py  2026-03-23_email_cleanup_review_phase2.py  2026-03-23_email_sync_hardening.py  2026-03-23_email_triage_phase1.py  2026-03-23_email_triage_phase3_routing.py  2026-03-24_email_phase4_auto_actions.py
backend/app/: __init__.py  admin.py  main.py
backend/app/agents/: __init__.py  area_config.py  areas.py  assistant.py  langchain_assistant.py
backend/app/api/: deps.py  exception_handlers.py
backend/app/browser/: __init__.py  ai_analyzer.py  client.py  extractors.py  job_scraper.py
backend/app/clients/: __init__.py  gmail.py
backend/app/commands/: cleanup.py  example.py  seed.py
backend/app/core/: cache.py  config.py  cover_letter_pdf.py  logfire_setup.py  oauth.py  security.py  storage.py  text_extraction.py
backend/app/db/: session.py
backend/app/email/: __init__.py  config.py  utils.py
backend/app/pipelines/: __init__.py  action_base.py  actions.py  registry.py
backend/app/repositories/: __init__.py  base.py  conversation.py  email_action_log.py  email_destination.py  email_source.py  email_sync.py  finance.py  integration_token.py  job.py  job_profile.py  pipeline_run.py  project.py  resume.py  scheduled_task.py  session.py  story.py  user_profile.py
backend/app/schemas/: __init__.py  conversation.py  email_cleanup.py  email_destination.py  email_source.py  email_sync.py  email_triage.py  finance.py  job.py  (+11 more)
backend/cli/: commands.py
backend/tests/: conftest.py  test_admin.py  test_agents.py  test_browser.py  test_core.py  test_cover_letter_pdf.py  test_email.py  test_email_triage_routing.py  test_finance.py  test_job_prep_generator.py  test_job_prep_pipeline.py  test_job_service_ingestion.py  test_job_service_workflow.py  test_pipelines.py  test_scheduled_task_service.py  test_security.py  test_worker.py
(+628 files in other folders)
