[project]
name = "personal_automations"
version = "0.1.0"
description = "FastApi + Next.js pydrantic ai personal automation manager"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "phetzel", email = "phetzel89@gmail.com" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "orjson>=3.10.0",
    "logfire[fastapi,asyncpg,redis,httpx]>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "redis>=5.2.0",
    "fastapi-cache2>=0.2.2",
    "slowapi>=0.1.9",
    "fastapi-pagination>=0.12.31",
    "sentry-sdk[fastapi]>=2.18.0",
    "sqladmin>=0.19.0",
    "itsdangerous>=2.2.0",
    "taskiq[reload]>=0.11.0",
    "taskiq-redis>=1.0.0",
    "taskiq-dependencies>=0.1.0",
    "boto3>=1.35.0",
    "pydantic-ai>=0.0.39",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "python-jobspy>=1.1.75",  # Requires 1.1.75+ for numpy 1.26+ (Python 3.12 compat)
    # Resume text extraction
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    # PDF generation for cover letters
    "reportlab>=4.0.0",
    # Browser automation
    "playwright>=1.49.0",
    "browser-use>=0.1.40",
    # Gmail API integration
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    # Email parsing
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "anyio[trio]>=4.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
personal_automations = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# python-jobspy pins old numpy/pandas versions incompatible with Python 3.12
# Override to versions with pre-built wheels for Python 3.12+
constraint-dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
